Etape 2, maj header, sectioin hero et bouton Explorer nos restaurants

--- a/index.html
+++ b/index.html
@@ -12,10 +12,16 @@
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer">
 </head>
 <body>
+    <div class="">
+        <div class=""></div>
+    </div>
     <header>
         <nav>
-            <img src="Assets/images/logo/ohmyfood.png" alt="logo Ohmyfood">
+            <img src="Assets/images/logo/ohmyfood.png" alt="logo Ohmyfood" class="nav__logo">
             <form class="form">
+                <div class="form_location-dot">
+                    <i class=""fa-solid fa-location-dot></i>
+                </div>
                 <input class="form__ville" type="search" name="ville" placeholder="Paris, Belleville">
             </form>
         </nav>
@@ -29,16 +35,18 @@
         </section>
 
         <section class="filter">
-            <h2>Fonctionnement</h2>
-            <div>
+            <h2 class="filter_title">Fonctionnement</h2>
+            <div></div>
+            <div class="filter__content">
                 <p>1</p>
+                <i class="fa-solid fa-mobile-screen-button"></i>
                 <h3>Choisissez un restaurant</h3>
             </div>
-            <div>
+            <div class="filter__content">
                 <p>2</p>
                 <h3>Composez votre menu</h3>
             </div>
-            <div>
+            <div class="filter__content">
                 <p>3</p>
                 <h3>Dégustez au restaurant</h3>
             </div>
