Etape 2, Page d'accueil, maj footer

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <img src="Assets/images/logo/ohmyfood.png" alt="logo Ohmyfood" class="nav__logo">
             <form class="form">
                 <div class="form_location-dot">
-                    <i class=""fa-solid fa-location-dot></i>
+                    <i class="fa-solid fa-location-dot"></i>
                 </div>
                 <input class="form__ville" type="search" name="ville" placeholder="Paris, Belleville">
             </form>
@@ -96,28 +96,34 @@
             <h2 class="footer__title">Ohmyfood</h2>
             <ul class="footer__list">
                 <li>
-                    <div class="">
+                    <div class="footer__list__text">
                         <a href="#">
-                            <p>Proposer un restaurant</p>
+                            <div class="footer__list__text__fa-solid">
+                                <i class="fa-solid fa-utensils"></i>
+                                <p>Proposer un restaurant</p>
+                            </div>
                         </a>
                     </div>
                 </li>
                 <li>
-                    <div class="">
+                    <div class="footer__list__text">
                         <a href="#">
-                            <p>Devenir partenaire</p>
+                            <div class="footer__list__text__fa-solid">
+                                <i class="fa-solid fa-handshake-angle"></i>
+                                <p>Devenir partenaire</p>
+                            </div>
                         </a>
                     </div>
                 </li>
                 <li>
-                    <div class="">
+                    <div class="footer__list__text">
                         <a href="#">
                             <p>Mentions légales</p>
                         </a>
                     </div>
                 </li>
                 <li>
-                    <div class="">
+                    <div class="footer__list__text">
                         <a href="mailto:ohmyfood@expensive.com">Contact</a>
                     </div>
                 </li>
