Etape 2 et 3, ajout animations Page d'accueil, maj fonctionnement et restaurants

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </section>
 
         <section class="filter">
-            <h2 class="filter_title">Fonctionnement</h2>
+            <h2 class="filter__title">Fonctionnement</h2>
             <div></div>
             <div class="filter__content">
                 <p>1</p>
@@ -44,10 +44,12 @@
             </div>
             <div class="filter__content">
                 <p>2</p>
+                <i class="fa-solid fa-list-ul"></i>
                 <h3>Composez votre menu</h3>
             </div>
             <div class="filter__content">
                 <p>3</p>
+                <i class="fa-solid fa-store"></i>
                 <h3>Dégustez au restaurant</h3>
             </div>
         </section>
@@ -58,33 +60,49 @@
                 <article class="restaurants__cards__card">
                     <a href="Restaurants/menu_la_palette_du_gout.html">
                         <p>Nouveau</p>
-                        <img src="" alt="image plat gastronomique">
+                        <img src="Assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="image plat gastronomique">
                         <h3>La palette du goût</h3>
                         <p>Ménilmontant</p>
+                        <div>
+                            <i class="fa-regular fa-heart"></i>
+                            <i class="fa-solid fa-heart"></i>
+                        </div>
                     </a>
                 </article>
                 <article class="restaurants__cards__card">
                     <a href="Restaurants/menu_la_note_enchantee.html">
                         <p>Nouveau</p>
-                        <img src="" alt="image plat gastronomique">
+                        <img src="Assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="image plat gastronomique">
                         <h3>La note enchantée</h3>
                         <p>Charonne</p>
+                        <div>
+                            <i class="fa-regular fa-heart"></i>
+                            <i class="fa-solid fa-heart"></i>
+                        </div>
                     </a>
                 </article>
                 <article class="restaurants__cards__card">
                     <a href="Restaurants/menu_a_la_francaise.html">
                         <p>Nouveau</p>
-                        <img src="" alt="image plat gastronomique">
+                        <img src="Assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="image plat gastronomique">
                         <h3>A la française</h3>
                         <p>Cité Rouge</p>
+                        <div>
+                            <i class="fa-regular fa-heart"></i>
+                            <i class="fa-solid fa-heart"></i>
+                        </div>
                     </a>
                 </article>
                 <article class="restaurants__cards__card">
                     <a href="Restaurants/menu_le_delice_des_sens.html">
                         <p>Nouveau</p>
-                        <img src="" alt="image plat gastronomique">
+                        <img src="Assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="image plat gastronomique">
                         <h3>Le délice des sens</h3>
                         <p>Cité Rouge</p>
+                        <div>
+                            <i class="fa-regular fa-heart"></i>
+                            <i class="fa-solid fa-heart"></i>
+                        </div>
                     </a>
                 </article>
             </div>
