Etape 2 et 3, page accueil et animation, ajout class et scss dans la section restaurants

--- a/index.html
+++ b/index.html
@@ -59,11 +59,15 @@
             <div class="restaurants__cards">
                 <article class="restaurants__cards__card">
                     <a href="Restaurants/menu_la_palette_du_gout.html">
-                        <p>Nouveau</p>
+                        <div class="restaurants__cards__card__new">
+                            <p>Nouveau</p>
+                        </div>
                         <img src="Assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="image plat gastronomique">
-                        <h3>La palette du goût</h3>
-                        <p>Ménilmontant</p>
-                        <div>
+                        <div class="restaurants__cards__card__text">
+                            <h3 class="restaurants__cards__card__text__title">La palette du goût</h3>
+                            <p class="restaurants__cards__card__text__subtile">Ménilmontant</p>
+                        </div>
+                        <div class="restaurants__cards__card__heart">
                             <i class="fa-regular fa-heart"></i>
                             <i class="fa-solid fa-heart"></i>
                         </div>
@@ -71,11 +75,15 @@
                 </article>
                 <article class="restaurants__cards__card">
                     <a href="Restaurants/menu_la_note_enchantee.html">
-                        <p>Nouveau</p>
+                        <div class="restaurants__cards__card__new">
+                            <p>Nouveau</p>
+                        </div>
                         <img src="Assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="image plat gastronomique">
-                        <h3>La note enchantée</h3>
-                        <p>Charonne</p>
-                        <div>
+                        <div class="restaurants__cards__card__text">
+                            <h3 class="restaurants__cards__card__text__title">La note enchantée</h3>
+                            <p class="restaurants__cards__card__text__subtile">Charonne</p>
+                        </div>
+                            <div class="restaurants__cards__card__heart">
                             <i class="fa-regular fa-heart"></i>
                             <i class="fa-solid fa-heart"></i>
                         </div>
@@ -83,11 +91,15 @@
                 </article>
                 <article class="restaurants__cards__card">
                     <a href="Restaurants/menu_a_la_francaise.html">
-                        <p>Nouveau</p>
+                        <div class="restaurants__cards__card__new">
+                            <p>Nouveau</p>
+                        </div>
                         <img src="Assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="image plat gastronomique">
-                        <h3>A la française</h3>
-                        <p>Cité Rouge</p>
-                        <div>
+                        <div class="restaurants__cards__card__text">
+                            <h3 class="restaurants__cards__card__text__title">A la française</h3>
+                            <p class="restaurants__cards__card__text__subtile">Cité Rouge</p>
+                        </div>
+                            <div class="restaurants__cards__card__heart">
                             <i class="fa-regular fa-heart"></i>
                             <i class="fa-solid fa-heart"></i>
                         </div>
@@ -95,11 +107,15 @@
                 </article>
                 <article class="restaurants__cards__card">
                     <a href="Restaurants/menu_le_delice_des_sens.html">
-                        <p>Nouveau</p>
+                        <div class="restaurants__cards__card__new">
+                            <p>Nouveau</p>
+                        </div>
                         <img src="Assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="image plat gastronomique">
-                        <h3>Le délice des sens</h3>
-                        <p>Cité Rouge</p>
-                        <div>
+                            <div class="restaurants__cards__card__text">
+                            <h3 class="restaurants__cards__card__text__title">Le délice des sens</h3>
+                            <p class="restaurants__cards__card__text__subtile">Folie-Méricourt</p>
+                        </div>
+                            <div class="restaurants__cards__card__heart">
                             <i class="fa-regular fa-heart"></i>
                             <i class="fa-solid fa-heart"></i>
                         </div>
