--- a/Restaurants/menu_la_palette_du_gout.html
+++ b/Restaurants/menu_la_palette_du_gout.html
@@ -13,13 +13,41 @@
 </head>
 <body>
     <header>
-
+        <nav class="nav__bar">
+            <img src="../Assets/images/logo/ohmyfood.png" alt="logo Ohmyfood" class="nav__bar__logo">
+            <div class="nav__bar__button--return">
+                <a href="../index.html">
+                    <i class="fa-solid fa-arrow-left"></i>
+                </a>
+            </div>
+        </nav>
     </header>
-    <main>
-        <section>
-            <h1>La palette du goût</h1>
-            <article>
-                <h3>Fricassée d'escargots</h3>
+  
+    <main class="main__menu">
+        <div class="main__img">
+            <img src="../Assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="image une assiette gastronomique">
+        </div>
+        <section class="menu">
+            <h1 class="menu__title">La palette du goût</h1>
+            <div class="menu__heart">
+                <i class="fa-regular fa-heart"></i>
+                <i class="fa-solid fa-heart"></i>
+            </div>
+            <article class="menu__card">
+                <h2 class="menu__card__text"><span>ENTR</span>EES</h2>
+                <div class="menu__card__starter">
+                    <div class="menu__card__content">
+                        <h3 class="menu__card_content_title">Fricassée d'escargots</h3>
+                        <div class="menu__card__content__text">
+                            <p class="menu__card__content__text__subtitle">Au piment d'Espelette</p>
+                            <p class="menu__card__content__text__price">25 €</p>
+                            <div class="menu__card__content__checkbox">
+                                <i class="fa-regular fa-circle-check"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
                 <h3>Foie gras de canard mi-cuit</h3>
                 <h3>Oeuf au plat</h3>
                 <h3>Filet de boeuf aux herbes</h3>
@@ -36,76 +64,37 @@
             <h2 class="footer__title">Ohmyfood</h2>
             <ul class="footer__list">
                 <li>
-                    <div class="">
+                    <div class="footer__list__text">
                         <a href="#">
-                            <p>Proposer un restaurant</p>
+                              <div class="footer__list__text__fa-solid">
+                                  <i class="fa-solid fa-utensils"></i>
+                                  <p>Proposer un restaurant</p>
+                              </div>
+                        </a> 
+                    </div>                 
+                </li>
+                <li>
+                    <div class="footer__list__text"> 
+                        <a href="#">
+                          <div class="footer__list__text__fa-solid">
+                              <i class="fa-solid fa-handshake-angle"></i>
+                              <p>Devenir partenaire</p>
+                          </div>
                         </a>
                     </div>
                 </li>
                 <li>
-                    <div class="">
-                        <a href="#">
-                            <p>Devenir partenaire</p>
-                        </a>
+                    <div class="footer__list__text">
+                        <a href="#">Mentions légales</a>
                     </div>
                 </li>
                 <li>
-                    <div class="">
-                        <a href="#">
-                            <p>Mentions légales</p>
-                        </a>
-                    </div>
-                </li>
-                <li>
-                    <div class="">
-                        <a href="mailto:ohmyfood@expensive.com">Contact</a>
-                    </div>
+                  <div class="footer__list__text">
+                      <a href="mailto:ohmyfood@expensive.com">Contact</a>
+                  </div>
                 </li>
             </ul>
         </div>
     </footer>
 </body>
 </html>
-
-
-La palette du goût
-
-Entrées
-Fricassée d'escargots
-Au piment d'Espelette 
-25€
-
-Foie gras de canard mi-cuit
-Et ses copeaux de truffe noire
-35€
-
-Œuf au plat
-Assaisonné à la truffe sur lit de caviar
-20€
-
-
-Plats
-Filet de bœuf aux herbes
-Accompagné de sa ribambelle de légumes
-40€
-
-Parmentier de queue de bœuf
-À la truffe noire sur sa purée de panais
-35€
-
-Filet de turbot
-Aux agrumes
-44€
-        
-Desserts
-Paris-Brest
-Revisité
-18€
-
-Macaron au chocolat d'exception 
-Et glace à la vanille de Madagascar
-22€
-
-Mousse au chocolat 
-Au piment d'Espelette et à la truffe noire
-23€ 
