Etape 5, ajout code html du menu complet

--- a/Restaurants/menu_la_palette_du_gout.html
+++ b/Restaurants/menu_la_palette_du_gout.html
@@ -47,17 +47,110 @@
                         </div>
                     </div>
                 </div>
-                
-                <h3>Foie gras de canard mi-cuit</h3>
-                <h3>Oeuf au plat</h3>
-                <h3>Filet de boeuf aux herbes</h3>
-                <h3>Parmentier de queue de boeuf</h3>
-                <h3>Filet de turbot</h3>
-                <h3>Paris-Brest</h3>
-                <h3>Macaron au chocolat d'exception</h3>
-                <h3>Mousse au chocolat</h3>
+                <div class="menu__card__content">
+                    <h3 class="menu__card__content__title">Foie gras de canard mi-cuit</h3>
+                    <div class="menu__card__content__text">
+                       <p class="menu__card__content__text__subtitle">Et ses copeaux de truffe noire</p>
+                       <p class="menu__card__content__text__price">35 €</p>
+                       <div class="menu__card__content__checkbox">
+                           <i class="fa-regular fa-circle-check"></i>
+                       </div>
+                   </div>
+                </div>
+                <div class="menu__card__content">
+                    <h3 class="menu__card__content__title">Oeuf au plat</h3>
+                    <div class="menu__card__content__text">
+                   <p class="menu__card__content__text__subtitle">Assaisonné à la truffe sur lit de caviar</p>
+                   <p class="menu__card__content__text__price">20 €</p>
+                   <div class="menu__card__content__checkbox">
+                       <i class="fa-regular fa-circle-check"></i>
+                   </div>
+                   </div>
+               </div>
             </article>
+            <article class="menu__card">
+                <h2 class="menu__card__text"><span>PLAT</span>S</h2>
+                <div class="menu__card__dish">
+                    <div class="menu__card__content">
+                        <h3 class="menu__card__content__title">Filet de boeuf aux herbes</h3>
+                        <div class="menu__card__content__text">
+                            <p class="menu__card__content__text__subtitle">Accompagné de sa ribambelle de légumes</p>
+                            <p class="menu__card__content__text__price">40 €</p>
+                            <div class="menu__card__content__checkbox">
+                                <i class="fa-regular fa-circle-check"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu__card__dish">
+                    <div class="menu__card__content">
+                        <h3 class="menu__card__content__title">Parmentier de queue de boeuf</h3>
+                        <div class="menu__card__content__text">
+                            <p class="menu__card__content__text__subtitle">À la truffe noire sur sa purée de panais</p>
+                            <p class="menu__card__content__text__price">35 €</p>
+                            <div class="menu__card__content__checkbox">
+                                <i class="fa-regular fa-circle-check"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu__card__dish">
+                    <div class="menu__card__content">
+                        <h3 class="menu__card__content__title">Filet de turbot</h3>
+                        <div class="menu__card__content__text">
+                            <p class="menu__card__content__text__subtitle">Aux agrumes</p>
+                            <p class="menu__card__content__text__price">44 €</p>
+                            <div class="menu__card__content__checkbox">
+                                <i class="fa-regular fa-circle-check"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </article>
+            <article class="menu__card">
+                <h2 class="menu__card__text"><span>DESS</span>ERTS</h2>
+                <div class="menu__card__dessert">
+                    <div class="menu__card__content">
+                        <h3 class="menu__card__content__title">Paris-Brest</h3>
+                        <div class="menu__card__content__text">
+                            <p class="menu__card__content__text__subtitle">Revisité</p>
+                            <p class="menu__card__content__text__price">18 €</p>
+                            <div class="menu__card__content__checkbox">
+                                <i class="fa-regular fa-circle-check"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu__card__dessert">
+                    <div class="menu__card__content">
+                         <h3 class="menu__card__content__title">Macaron au chocolat d'exception</h3>
+                         <div class="menu__card__content__text">
+                            <p class="menu__card__content__text__subtitle">Et glace à la vanille de Madagascar</p>
+                            <p class="menu__card__content__text__price">22 €</p>
+                            <div class="menu__card__content__checkbox">
+                                <i class="fa-regular fa-circle-check"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu__card__dessert">
+                    <div class="menu__card__content">
+                        <h3 class="menu__card__content__title">Mousse au chocolat</h3>
+                        <div class="menu__card__content__text">
+                            <p class="menu__card__content__text__subtitle">Au piment d'Espelette et à la truffe noire</p>
+                            <p class="menu__card__content__text__price">23 €</p>
+                            <div class="menu__card__content__checkbox">
+                                <i class="fa-regular fa-circle-check"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </article>   
+        
+            <div class="footer__button">
+                <a href="" class="footer__button__menu">Commander</a>
         </section>
+    </div>
     </main>
     <footer>
         <div class="footer">
