Etape 3, animations page accueil ajout loader, correction bouton coeur, Etape 4, breakpoints identifés, Etape 5, animations pages de menu

--- a/Restaurants/menu_la_palette_du_gout.html
+++ b/Restaurants/menu_la_palette_du_gout.html
@@ -47,26 +47,30 @@
                         </div>
                     </div>
                 </div>
-                <div class="menu__card__content">
-                    <h3 class="menu__card__content__title">Foie gras de canard mi-cuit</h3>
-                    <div class="menu__card__content__text">
-                       <p class="menu__card__content__text__subtitle">Et ses copeaux de truffe noire</p>
-                       <p class="menu__card__content__text__price">35 €</p>
-                       <div class="menu__card__content__checkbox">
-                           <i class="fa-regular fa-circle-check"></i>
-                       </div>
-                   </div>
+                <div class="menu__card__starter">
+                    <div class="menu__card__content">
+                        <h3 class="menu__card__content__title">Foie gras de canard mi-cuit</h3>
+                        <div class="menu__card__content__text">
+                            <p class="menu__card__content__text__subtitle">Et ses copeaux de truffe noire</p>
+                            <p class="menu__card__content__text__price">35 €</p>
+                            <div class="menu__card__content__checkbox">
+                                <i class="fa-regular fa-circle-check"></i>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="menu__card__content">
-                    <h3 class="menu__card__content__title">Oeuf au plat</h3>
-                    <div class="menu__card__content__text">
-                   <p class="menu__card__content__text__subtitle">Assaisonné à la truffe sur lit de caviar</p>
-                   <p class="menu__card__content__text__price">20 €</p>
-                   <div class="menu__card__content__checkbox">
-                       <i class="fa-regular fa-circle-check"></i>
-                   </div>
-                   </div>
-               </div>
+                <div class="menu__card__starter">
+                    <div class="menu__card__content">
+                        <h3 class="menu__card__content__title">Oeuf au plat</h3>
+                        <div class="menu__card__content__text">
+                            <p class="menu__card__content__text__subtitle">Assaisonné à la truffe sur lit de caviar</p>
+                            <p class="menu__card__content__text__price">20 €</p>
+                            <div class="menu__card__content__checkbox">
+                                <i class="fa-regular fa-circle-check"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </article>
             <article class="menu__card">
                 <h2 class="menu__card__text"><span>PLAT</span>S</h2>
@@ -149,8 +153,8 @@
         
             <div class="footer__button">
                 <a href="" class="footer__button__menu">Commander</a>
+            </div>
         </section>
-    </div>
     </main>
     <footer>
         <div class="footer">
