--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer">
 </head>
 <body>
-    <div class="">
-        <div class=""></div>
+    <div class="loader">
+        <div class="loader__container"></div>
     </div>
     <header>
         <nav>
@@ -54,7 +54,7 @@
             </div>
         </section>
 
-        <section class="restaurants">
+        <section id="restaurants" class="restaurants">
             <h2 class="restaurants__title">Restaurants</h2>
             <div class="restaurants__cards">
                 <article class="restaurants__cards__card">
@@ -91,9 +91,6 @@
                 </article>
                 <article class="restaurants__cards__card">
                     <a href="Restaurants/menu_a_la_francaise.html">
-                        <div class="restaurants__cards__card__new">
-                            <p>Nouveau</p>
-                        </div>
                         <img src="Assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="image plat gastronomique">
                         <div class="restaurants__cards__card__text">
                             <h3 class="restaurants__cards__card__text__title">A la française</h3>
@@ -107,15 +104,12 @@
                 </article>
                 <article class="restaurants__cards__card">
                     <a href="Restaurants/menu_le_delice_des_sens.html">
-                        <div class="restaurants__cards__card__new">
-                            <p>Nouveau</p>
-                        </div>
                         <img src="Assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="image plat gastronomique">
-                            <div class="restaurants__cards__card__text">
+                        <div class="restaurants__cards__card__text">
                             <h3 class="restaurants__cards__card__text__title">Le délice des sens</h3>
                             <p class="restaurants__cards__card__text__subtile">Folie-Méricourt</p>
                         </div>
-                            <div class="restaurants__cards__card__heart">
+                        <div class="restaurants__cards__card__heart">
                             <i class="fa-regular fa-heart"></i>
                             <i class="fa-solid fa-heart"></i>
                         </div>
