--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <a href="Restaurants/menu_a_la_francaise.html">
                         <img src="Assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="image plat gastronomique">
                         <div class="restaurants__cards__card__text">
-                            <h3 class="restaurants__cards__card__text__title">A la française</h3>
+                            <h3 class="restaurants__cards__card__text__title">À la française</h3>
                             <p class="restaurants__cards__card__text__subtile">Cité Rouge</p>
                         </div>
                             <div class="restaurants__cards__card__heart">
