--- a/Restaurants/menu_a_la_francaise.html
+++ b/Restaurants/menu_a_la_francaise.html
@@ -1,40 +1,197 @@
-À la française
-
-Entrées
-Tartare de poulpe acidulé
-Aux zestes d'orange
-25€
-
-Velouté de légumes d'antan
-Carotte, panais, topinambour
-35€
-
-Soupe à l'oignon
-Revisitée
-20€
-
-Plats
-Coquilles Saint-Jacques
-Accompagnées d'une purée de panais
-40€
-
-Magret de canard
-Et parmentier de pommes de terre
-35€
-
-Pigeonneau d’Ille-et-Vilaine
-Sur son lit de gnocchis aux légumes
-44€
-
-Desserts
-Pétales de violettes glacés
-Et purée de noisettes
-18€
-
-Fondant au chocolat
-Revisité
-22€
-
-Millefeuille croustillant
-Myrtilles et pâte d’amande
-23€
+<!DOCTYPE html>
+<html lang="fr">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Menu - À la française </title>
+    <link rel="icon" type="image/svg+xml" href="../Assets/Images_et_textes_Ohmyfood/images/logo/ohmyfood@2x.svg">
+    <link rel="stylesheet" href="../sass/css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap" rel="stylesheet">     
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" 
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer">
+</head>
+<body>
+    <header>
+        <nav class="nav__bar">
+            <img src="../Assets/images/logo/ohmyfood.png" alt="logo Ohmyfood" class="nav__bar__logo">
+            <div class="nav__bar__button--return">
+                <a href="../index.html">
+                    <i class="fa-solid fa-arrow-left"></i>
+                </a>
+            </div>
+        </nav>
+    </header>
+  
+    <main class="main__menu">
+        <div class="main__img">
+            <img src="../Assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="image une assiette gastronomique">
+        </div>
+        <section class="menu">
+            <h1 class="menu__title">À la française</h1>
+            <div class="menu__heart">
+                <i class="fa-regular fa-heart"></i>
+                <i class="fa-solid fa-heart"></i>
+            </div>
+            <article class="menu__card">
+                <h2 class="menu__card__text"><span>ENTR</span>EES</h2>
+                <div class="menu__card__starter">
+                    <div class="menu__card__content">
+                        <h3 class="menu__card_content_title">Tartare de poulpe acidulé</h3>
+                        <div class="menu__card__content__text">
+                            <p class="menu__card__content__text__subtitle">Aux zestes d'orange</p>
+                            <p class="menu__card__content__text__price">25 €</p>
+                            <div class="menu__card__content__checkbox">
+                                <i class="fa-regular fa-circle-check"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu__card__starter">
+                    <div class="menu__card__content">
+                        <h3 class="menu__card__content__title">Velouté de légumes d'antan</h3>
+                        <div class="menu__card__content__text">
+                            <p class="menu__card__content__text__subtitle">Carotte, panais, topinambour</p>
+                            <p class="menu__card__content__text__price">35 €</p>
+                            <div class="menu__card__content__checkbox">
+                                <i class="fa-regular fa-circle-check"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu__card__starter">
+                    <div class="menu__card__content">
+                        <h3 class="menu__card__content__title">Soupe à l'oignon</h3>
+                        <div class="menu__card__content__text">
+                            <p class="menu__card__content__text__subtitle">Revisitée</p>
+                            <p class="menu__card__content__text__price">20 €</p>
+                            <div class="menu__card__content__checkbox">
+                                <i class="fa-regular fa-circle-check"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </article>
+            <article class="menu__card">
+                <h2 class="menu__card__text"><span>PLAT</span>S</h2>
+                <div class="menu__card__dish">
+                    <div class="menu__card__content">
+                        <h3 class="menu__card__content__title">Coquilles Saint-Jacques</h3>
+                        <div class="menu__card__content__text">
+                            <p class="menu__card__content__text__subtitle">Accompagnées d'une purée de panais</p>
+                            <p class="menu__card__content__text__price">40 €</p>
+                            <div class="menu__card__content__checkbox">
+                                <i class="fa-regular fa-circle-check"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu__card__dish">
+                    <div class="menu__card__content">
+                        <h3 class="menu__card__content__title">Magret de canard</h3>
+                        <div class="menu__card__content__text">
+                            <p class="menu__card__content__text__subtitle">Et parmentier de pommes de terre</p>
+                            <p class="menu__card__content__text__price">35 €</p>
+                            <div class="menu__card__content__checkbox">
+                                <i class="fa-regular fa-circle-check"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu__card__dish">
+                    <div class="menu__card__content">
+                        <h3 class="menu__card__content__title">Pigeonneau d'Ille-et-Vilaine</h3>
+                        <div class="menu__card__content__text">
+                            <p class="menu__card__content__text__subtitle">Sur son lit de gnocchis aux légumes</p>
+                            <p class="menu__card__content__text__price">44 €</p>
+                            <div class="menu__card__content__checkbox">
+                                <i class="fa-regular fa-circle-check"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </article>
+            <article class="menu__card">
+                <h2 class="menu__card__text"><span>DESS</span>ERTS</h2>
+                <div class="menu__card__dessert">
+                    <div class="menu__card__content">
+                        <h3 class="menu__card__content__title">Pétales de violettes glacés</h3>
+                        <div class="menu__card__content__text">
+                            <p class="menu__card__content__text__subtitle">Et purée de noisettes</p>
+                            <p class="menu__card__content__text__price">18 €</p>
+                            <div class="menu__card__content__checkbox">
+                                <i class="fa-regular fa-circle-check"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu__card__dessert">
+                    <div class="menu__card__content">
+                         <h3 class="menu__card__content__title">Fondant au chocolat</h3>
+                         <div class="menu__card__content__text">
+                            <p class="menu__card__content__text__subtitle">Revisité</p>
+                            <p class="menu__card__content__text__price">22 €</p>
+                            <div class="menu__card__content__checkbox">
+                                <i class="fa-regular fa-circle-check"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu__card__dessert">
+                    <div class="menu__card__content">
+                        <h3 class="menu__card__content__title">Millefeuille croustillant</h3>
+                        <div class="menu__card__content__text">
+                            <p class="menu__card__content__text__subtitle">Myrtilles et pâte d'amande</p>
+                            <p class="menu__card__content__text__price">23 €</p>
+                            <div class="menu__card__content__checkbox">
+                                <i class="fa-regular fa-circle-check"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </article>   
+        
+            <div class="footer__button">
+                <a href="" class="footer__button__menu">Commander</a>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div class="footer">
+            <h2 class="footer__title">Ohmyfood</h2>
+            <ul class="footer__list">
+                <li>
+                    <div class="footer__list__text">
+                        <a href="#">
+                              <div class="footer__list__text__fa-solid">
+                                  <i class="fa-solid fa-utensils"></i>
+                                  <p>Proposer un restaurant</p>
+                              </div>
+                        </a> 
+                    </div>                 
+                </li>
+                <li>
+                    <div class="footer__list__text"> 
+                        <a href="#">
+                          <div class="footer__list__text__fa-solid">
+                              <i class="fa-solid fa-handshake-angle"></i>
+                              <p>Devenir partenaire</p>
+                          </div>
+                        </a>
+                    </div>
+                </li>
+                <li>
+                    <div class="footer__list__text">
+                        <a href="#">Mentions légales</a>
+                    </div>
+                </li>
+                <li>
+                  <div class="footer__list__text">
+                      <a href="mailto:ohmyfood@expensive.com">Contact</a>
+                  </div>
+                </li>
+            </ul>
+        </div>
+    </footer>
+</body>
+</html>
