--- a/Restaurants/menu_la_note_enchantee.html
+++ b/Restaurants/menu_la_note_enchantee.html
@@ -1,44 +1,209 @@
-La note enchantée
-
-Entrées
-Ravioles de foie gras 
-Accompagnées de leur crème à la truffe
-25€
-
-Caviar osciètre 
-Sur blini à la farine de blé noir
-35€
-
-Homard et espuma de potiron
-Marinés aux zestes d'orange
-20€
-
-Foie gras de canard cuit entier
-Confiture de figue et pain toasté
-35€
+<!DOCTYPE html>
+<html lang="fr">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Menu - La note enchantée </title>
+    <link rel="icon" type="image/svg+xml" href="../Assets/Images_et_textes_Ohmyfood/images/logo/ohmyfood@2x.svg">
+    <link rel="stylesheet" href="../sass/css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap" rel="stylesheet">     
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" 
+        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer">
+</head>
+<body>
+    <header>
+        <nav class="nav__bar">
+            <img src="../Assets/images/logo/ohmyfood.png" alt="logo Ohmyfood" class="nav__bar__logo">
+            <div class="nav__bar__button--return">
+                <a href="../index.html">
+                    <i class="fa-solid fa-arrow-left"></i>
+                </a>
+            </div>
+        </nav>
+    </header>
+  
+    <main class="main__menu">
+        <div class="main__img">
+            <img src="../Assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="image une assiette gastronomique">
+        </div>
+        <section class="menu">
+            <h1 class="menu__title">La note enchantée</h1>
+            <div class="menu__heart">
+                <i class="fa-regular fa-heart"></i>
+                <i class="fa-solid fa-heart"></i>
+            </div>
+            <article class="menu__card">
+                <h2 class="menu__card__text"><span>ENTR</span>EES</h2>
+                <div class="menu__card__starter">
+                    <div class="menu__card__content">
+                        <h3 class="menu__card_content_title">Ravioles de foie gras</h3>
+                        <div class="menu__card__content__text">
+                            <p class="menu__card__content__text__subtitle">Accompagnées de leur crème à la truffe</p>
+                            <p class="menu__card__content__text__price">25 €</p>
+                            <div class="menu__card__content__checkbox">
+                                <i class="fa-regular fa-circle-check"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu__card__starter">
+                    <div class="menu__card__content">
+                        <h3 class="menu__card__content__title">Cavia osciètre</h3>
+                        <div class="menu__card__content__text">
+                            <p class="menu__card__content__text__subtitle">Sur blini à la farine de blé noir</p>
+                            <p class="menu__card__content__text__price">35 €</p>
+                            <div class="menu__card__content__checkbox">
+                                <i class="fa-regular fa-circle-check"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu__card__starter">
+                    <div class="menu__card__content">
+                        <h3 class="menu__card__content__title">Homard et espuma de potiron</h3>
+                        <div class="menu__card__content__text">
+                            <p class="menu__card__content__text__subtitle">Marinés aux zestes d'orange</p>
+                            <p class="menu__card__content__text__price">20 €</p>
+                            <div class="menu__card__content__checkbox">
+                                <i class="fa-regular fa-circle-check"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu__card__starter">
+                    <div class="menu__card__content">
+                        <h3 class="menu__card__content__title">Foie gras de canard cuit entier</h3>
+                        <div class="menu__card__content__text">
+                            <p class="menu__card__content__text__subtitle">Confiture de figue et pain toasté</p>
+                            <p class="menu__card__content__text__price">35 €</p>
+                            <div class="menu__card__content__checkbox">
+                                <i class="fa-regular fa-circle-check"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </article>
+            <article class="menu__card">
+                <h2 class="menu__card__text"><span>PLAT</span>S</h2>
+                <div class="menu__card__dish">
+                    <div class="menu__card__content">
+                        <h3 class="menu__card__content__title">Noix de coquilles Saint-Jacques</h3>
+                        <div class="menu__card__content__text">
+                            <p class="menu__card__content__text__subtitle">Sur lit de purée de céleri-rave</p>
+                            <p class="menu__card__content__text__price">40 €</p>
+                            <div class="menu__card__content__checkbox">
+                                <i class="fa-regular fa-circle-check"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu__card__dish">
+                    <div class="menu__card__content">
+                        <h3 class="menu__card__content__title">Langoustine poêlée</h3>
+                        <div class="menu__card__content__text">
+                            <p class="menu__card__content__text__subtitle">Purée de patate douce</p>
+                            <p class="menu__card__content__text__price">35 €</p>
+                            <div class="menu__card__content__checkbox">
+                                <i class="fa-regular fa-circle-check"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu__card__dish">
+                    <div class="menu__card__content">
+                        <h3 class="menu__card__content__title">Mijoté de queue de boeuf</h3>
+                        <div class="menu__card__content__text">
+                            <p class="menu__card__content__text__subtitle">Et riz sauvage aux zestes de citron</p>
+                            <p class="menu__card__content__text__price">44 €</p>
+                            <div class="menu__card__content__checkbox">
+                                <i class="fa-regular fa-circle-check"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </article>
+            <article class="menu__card">
+                <h2 class="menu__card__text"><span>DESS</span>ERTS</h2>
+                <div class="menu__card__dessert">
+                    <div class="menu__card__content">
+                        <h3 class="menu__card__content__title">Macaron noisette et chocolat</h3>
+                        <div class="menu__card__content__text">
+                            <p class="menu__card__content__text__subtitle">Glace au caramel brun et sel de Guérande</p>
+                            <p class="menu__card__content__text__price">18 €</p>
+                            <div class="menu__card__content__checkbox">
+                                <i class="fa-regular fa-circle-check"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu__card__dessert">
+                    <div class="menu__card__content">
+                         <h3 class="menu__card__content__title">Baba au rhum revisité</h3>
+                         <div class="menu__card__content__text">
+                            <p class="menu__card__content__text__subtitle">Avec son coulis de citron</p>
+                            <p class="menu__card__content__text__price">22 €</p>
+                            <div class="menu__card__content__checkbox">
+                                <i class="fa-regular fa-circle-check"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu__card__dessert">
+                    <div class="menu__card__content">
+                        <h3 class="menu__card__content__title">Tarte au citron meringuée</h3>
+                        <div class="menu__card__content__text">
+                            <p class="menu__card__content__text__subtitle">Déstructurée</p>
+                            <p class="menu__card__content__text__price">23 €</p>
+                            <div class="menu__card__content__checkbox">
+                                <i class="fa-regular fa-circle-check"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </article>   
         
-Plats
-Noix de coquilles Saint-Jacques
-Sur lit de purée de céleri-rave
-40€
-
-Langoustine poêlée
-Purée de patate douce
-35€
-
-Mijoté de queue de bœuf 
-Et riz sauvage aux zestes de citron
-44€
-
-Desserts
-Macaron noisette et chocolat
-Glace au caramel brun et sel de Guérande
-18€
-
-Baba au rhum revisité 
-Avec son coulis de citron
-22€
-
-Tarte au citron meringuée 
-Déstructurée
-23€
+            <div class="footer__button">
+                <a href="" class="footer__button__menu">Commander</a>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div class="footer">
+            <h2 class="footer__title">Ohmyfood</h2>
+            <ul class="footer__list">
+                <li>
+                    <div class="footer__list__text">
+                        <a href="#">
+                              <div class="footer__list__text__fa-solid">
+                                  <i class="fa-solid fa-utensils"></i>
+                                  <p>Proposer un restaurant</p>
+                              </div>
+                        </a> 
+                    </div>                 
+                </li>
+                <li>
+                    <div class="footer__list__text"> 
+                        <a href="#">
+                          <div class="footer__list__text__fa-solid">
+                              <i class="fa-solid fa-handshake-angle"></i>
+                              <p>Devenir partenaire</p>
+                          </div>
+                        </a>
+                    </div>
+                </li>
+                <li>
+                    <div class="footer__list__text">
+                        <a href="#">Mentions légales</a>
+                    </div>
+                </li>
+                <li>
+                  <div class="footer__list__text">
+                      <a href="mailto:ohmyfood@expensive.com">Contact</a>
+                  </div>
+                </li>
+            </ul>
+        </div>
+    </footer>
+</body>
+</html>
